@@ -13123,7 +13123,7 @@ Functions @code{Rvprintf} and @code{REvprintf} are analogues using the
 @code{vprintf} interface.  Because that is a C99@footnote{also part of
 C++11.} interface, they are only defined by @file{R_ext/Print.h} in C++
 code if the macro @code{R_USE_C99_IN_CXX} is defined when it is
-included.
+included or, as from @R{} 3.7.0, a C++11 compiler is used.
 
 Another circumstance when it may be important to use these functions is
 when using parallel computation on a cluster of computational nodes, as
